2006-06-20 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Fixed a bug in stack-box mode when selected signal was not of position type.

2006-06-20 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Fixed a bug in plotting uneven-timestamps flag line.
	- Fixed a bug while switching from drag box mode to draw new box mode.

2006-06-16 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	Several bug fixes in the newly added features.

2006-06-16 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Now plots a flag-line if & when the time stamps are unevenly spaced.
	- Added a list of markers that can be looped through (in addition of colors) when overlaying several datasets.
	- Now same tag for different file is allowed (after warning). 

2006-06-15 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig:	
	- Fixed a bug while loading a file that is already loaded in the database.
	- Now shows 'red' background while busy computing, so that user doesn't accidentally click everywhere.
	- Fixed a typo where instead of disabling 'overlay mags' functionality, program enabled it causing a crash later on.

2006-06-09 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:	
	- Fixed a bug in plotting spectrogram in log scale. Also, default view is set back to looking down from top, since 3D view wasn't much helpful.
	- Commented out the code for plotting energy vs time. Will add back after putting a checkbox in the advanced option window.
	- Fixed the annoying delay that happened when trying to draw a new box when one box already exists. Now first deletes the old box before switching to 'drag box' mode.

2006-06-09 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.fig:
	- Added a button to let user clear the stack created using 'plot freq domain results for this box in the stack' button.
	* lt_analysis_gui.m:
	- Coding associated with 'clear stack' button